# cmake_usage

computer_simulation/: CMakeLists.txt
computer_simulation/include/: cpu.h  gpu.h  hdd.h  kbd.h  ram.h
computer_simulation/src/: CMakeLists.txt  cpu.cpp  gpu.cpp  hdd.cpp  kbd.cpp  main.cpp  ram.cpp
include/: .instruments.h.swp  coordinates.h  instruments.h
src/: .instruments.cpp.swp  coordinates.cpp  instruments.cpp  main.cpp
surgeon_simulator/: CMakeLists.txt
surgeon_simulator/src/: CMakeLists.txt
